Using overflow hidden to prevent wave from stretching view

--- a/src/base.css
+++ b/src/base.css
@@ -39,3 +39,7 @@ body {
 	position: absolute;
 	left: -9999px;
 }
+
+.App {
+	overflow-x: hidden;
+}
